Fix an issue where Alert dialog have wrong position fixes issue #1

--- a/scss/myastro-miniform.scss
+++ b/scss/myastro-miniform.scss
@@ -210,7 +210,7 @@ body {
   position: fixed;
   z-index: 99;
   width: 100vw;
-  height: 100vw;
+  height: 100%;
   margin: 0;
   background-color: rgba(0, 0, 0, .7);
   color: #000;
